# Cerbepous-REForge

./: .gitignore  Models.py  README.md  command_registrator.py  config.env  connection_to_mysql.py  diplom_tg_mediasoft.py  docker-compose.yaml  example.env  logger.py  package_updater.py  pyproject.toml  request_updater.py  requirements-dev.txt  requirements.txt  safe_random_citates.py  test.py  textovic.py
backend/: Dockerfile
backend/app/: settings.py
backend/app/dependencies/pydantic_models/: telegram_objects.py
backend/app/dependencies/vixengram/: api.py  core.py  longpoll.py  main.py  routing.py  settings.py
backend/app/dependencies/vixengram/backends/: longpoll.py
backend/app/dependencies/vixengram/backends/internationalizations/: session.py
backend/app/dependencies/vixengram/examples/: en_US.lang
backend/app/dependencies/vixengram/filters/: base.py  command.py
backend/app/dependencies/vixengram/internationalization/: __init__.py  i18n.py
backend/app/dependencies/vixengram/internationalization/backend/: base.py  session.py
backend/app/deployment/: pyproject.toml
backend/app/lang/: ru_RU.lang
backend/app/utils/: url.py
examples/cerberous/: docker-compose.yaml
examples/cerberous/backend/: Dockerfile  entrypoint.sh
examples/cerberous/backend/app/: main.py  settings.py
examples/cerberous/backend/app/deployment/: pyproject.toml
examples/cerberous/backend/app/lang/: en_US.lang  ru_RU.lang
examples/cerberous/backend/app/routers/common/: common.py  urls.py
vixengram/: aiohttpx.py  api.py  core.py  routing.py  settings.py
vixengram/backends/: longpoll.py  webhooks.py
vixengram/deployment/: requirements.txt
vixengram/filters/: base.py  command.py
vixengram/internationalization/: __init__.py  i18n.py
vixengram/internationalization/backend/: session.py
vixengram/internationalization/examples/: en_US.lang
vixengram/keyboards/: buttons.py  common_keyboard.py  inline_keyboard.py
vixengram/pydantic_models/: telegram.py
vixengram/types/: telegram_type.py
vixengram/utils/: url.py
vixengram/vixenapi/: core.py
vixengram/vixenapi/templates/: documentation.jinja2
(+2 files in other folders)
