[tool.poetry]
name = "vixengram"
version = "0.8.8.dev16"
description = "Telegram API project with generating documentation, middlewares, blackjack and coffe."
authors = [
    "Alexander Kasimov <kasimov.alexander.ul@gmail.com>",
]
readme = "README.md"

[tool.poetry.urls]
Source = "https://github.com/DarkLorianPrime/VixenGram"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
jinja2 = "^3.1.3"
aiohttp = "^3.9.5"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
