[tool.poetry]
name = "Cerberous"
version = "0.5.2"
description = ""
authors = ["Alexander Kasimov <kasimov.alexander.ul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
sqlalchemy = "^2.0.29"
jinja2 = "^3.1.3"
aiohttp = "^3.9.5"
aiohttp-jinja2 = "^1.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
mypy = "^1.9.0"
black = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
